--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Mekka-satchel.loader.js";
+      var loaderUrl = buildUrl + "/mekkaToUpload.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Mekka-satchel.data",
-        frameworkUrl: buildUrl + "/Mekka-satchel.framework.js",
-        codeUrl: buildUrl + "/Mekka-satchel.wasm",
+        dataUrl: buildUrl + "/mekkaToUpload.data",
+        frameworkUrl: buildUrl + "/mekkaToUpload.framework.js",
+        codeUrl: buildUrl + "/mekkaToUpload.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SeeOne Games",
         productName: "Mekka",
